[package]
name = "TestOauth2"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
rand = "0.9.1"
osc8 = "0.1"
tokio = { version = "1.45.1", features = ["full"] }
hyper = "1.6.0"
reqwest = { version = "0.12.15", features = ["json"] }
